force-app/main/default/objects/github_details__c/github_details__c.object-meta.xml
<CustomObject>
    <label>github details</label>
    <nameField>
        <label>github details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>github details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>