force-app/main/default/objects/github_details__c/fields/Added_Components__c.field-meta.xml
<CustomField>
    <fullName>Added_Components__c</fullName>
    <label>Added Components</label>
    <length>255</length>
    <type>Text</type>
</CustomField>