force-app/main/default/objects/github_details__c/fields/Commiter_Email__c.field-meta.xml
<CustomField>
    <fullName>Commiter_Email__c</fullName>
    <label>Commiter Email</label>
    <type>Email</type>
</CustomField>