force-app/main/default/objects/github_details__c/fields/Committed_Time__c.field-meta.xml
<CustomField>
    <fullName>Committed_Time__c</fullName>
    <label>Committed Time</label>
    <type>Time</type>
</CustomField>