force-app/main/default/objects/github_details__c/fields/Committed_url__c.field-meta.xml
<CustomField>
    <fullName>Committed_url__c</fullName>
    <label>Committed url</label>
    <type>Url</type>
</CustomField>