force-app/main/default/objects/github_details__c/fields/Committer_Comment__c.field-meta.xml
<CustomField>
    <fullName>Committer_Comment__c</fullName>
    <label>Committer Comment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>