force-app/main/default/objects/github_details__c/fields/Committer_name__c.field-meta.xml
<CustomField>
    <fullName>Committer_name__c</fullName>
    <label>Committer name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>