force-app/main/default/objects/github_details__c/fields/Repository_name__c.field-meta.xml
<CustomField>
    <fullName>Repository_name__c</fullName>
    <label>Repository name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>